Executable bit needed for CI job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,8 @@ stages:
 build:
   stage: build
   script:
+    # Make scripts executable
+    - 'chmod +x *.sh'
     # Import variables
     - 'source ./vars.sh'
     # Build kernel
