Run on any branch

--- a/ .github/workflows/build.yml
+++ b/ .github/workflows/build.yml
@@ -1,10 +1,8 @@
 name: Build zfs-on-wsl using an Ubuntu LTS container
 
+# Run on any branch
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
 
 jobs:
   run-script:
