Run on any branch

--- a/ .github/workflows/build.yml
+++ b/ .github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build zfs-on-wsl using an Ubuntu LTS container
 # Run on any branch
 on:
   push:
+    branches:
+      - '*'
 
 jobs:
   run-script:
